# ocpp2mqtt

./: LICENSE  README.md  ocpp-relay-server.py  pyproject.toml
config/: configuration_example.yaml
configs/: configuration_example.yaml
init/BSD/etc/newsyslog.conf.d/: ocpp-relay.conf
init/BSD/etc/rc.d/: ocpp2mqtt
ocpp2mqtt/: __init__.py  ocpp_relay_server.py  ocpp_snoop2mqtt.py
ocpp2mqtt/common/: __init__.py  types.py
ocpp2mqtt/debug/: snoop_recorder.py
ocpp2mqtt/mqtt/: __init__.py  __init__.py-e  mqttpublish.py  ocppfilter.py  ocppsnoop.py
ocpp2mqtt/relay/: ocpprelay.py  snoopws.py
